--- a/Classwork_3_14_23.ipynb
+++ b/Classwork_3_14_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMH2iLNbdHA1ZQN0bDSjL87",
+      "authorship_tag": "ABX9TyMRIVJrfT+VqI3uw7G8jAHl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Happy $\\pi$ Day!!**"
+      ],
+      "metadata": {
+        "id": "Kdqr1E7Qddnq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Ramanujan-Sato formula (1887-1920)\n",
         "\n",
         "\n",
-        "$\\pi = \\frac{99^2}{2\\sqrt{2}\\cdot\\sum_{k=0}^{\\infty}\\frac{4k!}{k!k!k!k!}\\cdot\\frac{26390k+1103}{396^{4k}}}$\n",
+        "$\\pi = \\frac{99^2}{2\\sqrt{2}\\cdot\\sum_{k=0}^{\\infty}\\frac{(4k)!}{k!k!k!k!}\\cdot\\frac{26390k+1103}{396^{4k}}}$\n",
         "\n",
         "*(Created 2003)*"
       ],
