--- a/P4M_Notebook_5.ipynb
+++ b/P4M_Notebook_5.ipynb
@@ -55,10 +55,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1_Gk52ZaDd1M",
-        "outputId": "22404065-1ca0-4402-8a63-5c5c0ef135aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "22404065-1ca0-4402-8a63-5c5c0ef135aa"
       },
       "source": [
         "for n in range(10):\n",
@@ -97,10 +97,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_pSgH2YtEoDT",
-        "outputId": "038c07cf-3f9d-4946-8eb2-bebd05b2d3c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "038c07cf-3f9d-4946-8eb2-bebd05b2d3c2"
       },
       "source": [
         "L = []\n",
@@ -123,10 +123,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7arqtxfWESCf",
-        "outputId": "fca60e61-69aa-4e4e-9387-c8789ac7b939",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fca60e61-69aa-4e4e-9387-c8789ac7b939"
       },
       "source": [
         "L = [0]*10\n",
@@ -158,10 +158,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "uTel6wOOEZrm",
-        "outputId": "b1c281f4-82fb-434b-b8e3-5b4e91451ca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b1c281f4-82fb-434b-b8e3-5b4e91451ca0"
       },
       "source": [
         "square_list = [n*n for n in range(10)]\n",
@@ -202,10 +202,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sCWmWLfWEgqV",
-        "outputId": "28a3e9bd-33f3-4579-b0bb-7c5b506893f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "28a3e9bd-33f3-4579-b0bb-7c5b506893f6"
       },
       "source": [
         "A = np.arange(10)\n",
@@ -292,10 +292,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lZGA3AmEFVs0",
-        "outputId": "ca1bde95-b126-4d7e-e1cb-35f8d69e4947",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca1bde95-b126-4d7e-e1cb-35f8d69e4947"
       },
       "source": [
         "%timeit make_sq_1(1000)"
@@ -315,10 +315,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVUJxnmfFYSU",
-        "outputId": "31e8203f-715d-4ba7-8e5c-f0270db5af9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "31e8203f-715d-4ba7-8e5c-f0270db5af9b"
       },
       "source": [
         "%timeit make_sq_2(1000)"
@@ -338,10 +338,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zt1l8hOsFZxs",
-        "outputId": "9ea88737-1bfd-4256-aa92-cc0249266108",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9ea88737-1bfd-4256-aa92-cc0249266108"
       },
       "source": [
         "%timeit make_sq_3(1000)"
@@ -361,10 +361,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pSVmRwAdFb5s",
-        "outputId": "c09b26d4-0ed4-499d-b057-541729b3f2c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c09b26d4-0ed4-499d-b057-541729b3f2c8"
       },
       "source": [
         "%timeit make_sq_4(1000)"
@@ -415,11 +415,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "3Qbzo01tFdi8",
-        "outputId": "58986ff7-3f3c-4f70-ebe2-66943cf3a943",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
-        }
+        },
+        "outputId": "58986ff7-3f3c-4f70-ebe2-66943cf3a943"
       },
       "source": [
         "fig,ax = plt.subplots(1,1,figsize=(8,5)) # Initialize a plot.\n",
@@ -584,11 +584,11 @@
         "make_sq_5(10)"
       ],
       "metadata": {
-        "id": "l0KxhJVPOnyj",
-        "outputId": "365663a9-f849-4015-e929-a8781f1e0df2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l0KxhJVPOnyj",
+        "outputId": "365663a9-f849-4015-e929-a8781f1e0df2"
       },
       "execution_count": 27,
       "outputs": [
@@ -630,12 +630,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "Fsqiog7jP5SY",
-        "outputId": "575d1831-8beb-45c0-d9aa-df80d70cbeab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
-        }
+        },
+        "id": "Fsqiog7jP5SY",
+        "outputId": "575d1831-8beb-45c0-d9aa-df80d70cbeab"
       },
       "execution_count": 28,
       "outputs": [
@@ -661,6 +661,61 @@
       "metadata": {
         "id": "3KRyB_SFQJro"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exercise 3**"
+      ],
+      "metadata": {
+        "id": "89iW0izKQ-vz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def inflate(S):\n",
+        "  inflated = ''\n",
+        "  for j,letter in enumerate(S):\n",
+        "    inflated += letter*(j+1)\n",
+        "\n",
+        "  return inflated"
+      ],
+      "metadata": {
+        "id": "YWDUCd2lRFru"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inflate('hello')"
+      ],
+      "metadata": {
+        "id": "j3tyiRPyRVBH",
+        "outputId": "82542537-07b8-483b-8b6c-c3c4aeebc464",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'heelllllllooooo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "markdown",
