--- a/Classwork_3_7_23.ipynb
+++ b/Classwork_3_7_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGY6/NyUq/1JNI4nnK6dtZ",
+      "authorship_tag": "ABX9TyNVrVnmrz4G5Ig0oRl0E+nc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -748,6 +748,7 @@
       "cell_type": "code",
       "source": [
         "#my code for anti-aliasing below - created 7/24/23\n",
+        "#works for small circles - scale of 20-50\n",
         "def scale(A):\n",
         "  m = 0\n",
         "  for i in range(len(A)):\n",
@@ -765,9 +766,9 @@
         "def darken(A):\n",
         "  for i in range(len(A)):\n",
         "    for j in range(len(A)):\n",
-        "      if A[i][j] > 150:\n",
+        "      if A[i][j] > 230:\n",
         "        A[i][j] = 255\n",
-        "      elif A[i][j] < 150:\n",
+        "      elif A[i][j] < 230:\n",
         "        A[i][j] = 0\n",
         "  return A\n",
         "\n",
@@ -778,7 +779,7 @@
       "metadata": {
         "id": "taZ3lTOLxUlR"
       },
-      "execution_count": 279,
+      "execution_count": 281,
       "outputs": []
     },
     {
